--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -29,6 +29,9 @@ layout: splash
   <span style="width:40%; display:inline-block;">
     <h3 class="archive__subtitle">Sponsored by</h3>
     <a href="https://www.sans.org/emea"><img src="{{ site.url }}/images/logos/sans-emea.png" /></a>
+    <a href="https://www.creditmutuel.fr/"><img src="{{ site.url }}/images/logos/cm.png" /></a>
+    <a href="https://www.doclerholding.com/en/main/"><img src="{{ site.url }}/images/logos/docler.jpg" /></a>
+    <a href="https://www.zero70.com/"><img src="{{ site.url }}/images/logos/z70_logo.jpg"/></a>
     </span>
     <span style="width:40%; display:inline-block;">
     </span>
