chg: [sponsoring] updated

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -31,13 +31,15 @@ layout: splash
     <a href="https://www.sans.org/emea"><img src="{{ site.url }}/images/logos/sans-emea.png" /></a>
     <a href="https://www.creditmutuel.fr/"><img src="{{ site.url }}/images/logos/cm.png" /></a>
     <a href="https://www.doclerholding.com/en/main/"><img src="{{ site.url }}/images/logos/docler.jpg" /></a>
-    <a href="https://www.zero70.com/"><img src="{{ site.url }}/images/logos/z70_logo.jpg"/></a>
+    <a href="https://www.3CORESec.com/"><img src="{{ site.url }}/images/logos/banner-500-motto.png"/></a>
     </span>
     <span style="width:40%; display:inline-block;">
     </span>
   </div>
 
 <h3 class="archive__subtitle">Diversity scholarship support by</h3>
+
+<a href="https://www.3CORESec.com/"><img src="{{ site.url }}/images/logos/banner-500-motto.png"/></a>
 
 <h3 class="archive__subtitle">Media sponsor support by</h3>
 
