chg: [layout] sponsoring links fixed

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -29,7 +29,7 @@ layout: splash
   <span style="width:40%; display:inline-block;">
     <h3 class="archive__subtitle">Sponsored by</h3>
     <a href="https://www.sans.org/emea"><img src="{{ site.url }}/images/logos/sans-emea.png" /></a>
-    <a href="http://www.deloitte.lu/"><img src="{{ site.url }}/images/logos/deloitte.jpg" /></a>
+    <a href="http://www.deloitte.lu/"><img src="{{ site.url }}/images/logos/deloitte.png" /></a>
     <a href="https://www.creditmutuel.fr/"><img src="{{ site.url }}/images/logos/cm.png" /></a>
     <a href="https://www.doclerholding.com/en/main/"><img src="{{ site.url }}/images/logos/docler.jpg" /></a>
     <a href="https://www.3CORESec.com/"><img src="{{ site.url }}/images/logos/banner-500-motto.png"/></a>
@@ -44,7 +44,7 @@ layout: splash
 
 <h3 class="archive__subtitle">Media sponsor support by</h3>
 
-<a href="http://www.miscmag.com/"><img src="{{ site.url }}/images/logos/misc.png" /></a><br />
+<a href="https://connect.ed-diamond.com/MISC"><img src="{{ site.url }}/images/logos/misc.png" /></a><br />
 
 <h3 class="archive__subtitle">Supporter ticket by</h3>
 
