chg: [sponsors] yeswehack added

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -33,10 +33,15 @@ layout: splash
     <a href="https://www.creditmutuel.fr/"><img src="{{ site.url }}/images/logos/cm.png" /></a>
     <a href="https://www.doclerholding.com/en/main/"><img src="{{ site.url }}/images/logos/docler.jpg" /></a>
     <a href="https://www.3CORESec.com/"><img src="{{ site.url }}/images/logos/banner-500-motto.png"/></a>
+    <a href="https://www.yeswehack.com/"><img src="{{ site.url }}/images/logos/yeswehack.png"/></a>
     </span>
     <span style="width:40%; display:inline-block;">
     </span>
   </div>
+
+<h3 class="archive__subtitle">CTF sponsoring by</h3>
+
+<a href="https://www.quarkslab.com/"><img src="{{ site.url }}/images/logos/quarkslab.jpg"/></a>
 
 <h3 class="archive__subtitle">Diversity scholarship support by</h3>
 
@@ -49,7 +54,6 @@ layout: splash
 <h3 class="archive__subtitle">Supporter ticket by</h3>
 
 
-<h3 class="archive__subtitle">CTF sponsoring by</h3>
 
 
 <h3 class="archive__subtitle">Internet provided by </h3>
