chg: [sponsors] added

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -45,7 +45,9 @@ layout: splash
 
 <h3 class="archive__subtitle">Diversity scholarship support by</h3>
 
+
 <a href="https://www.3CORESec.com/"><img src="{{ site.url }}/images/logos/banner-500-motto.png"/></a>
+<a href="https://www.telindus.lu/"><img src="{{ site.url }}/images/logos/telindus.png"/></a>
 
 <h3 class="archive__subtitle">Media sponsor support by</h3>
 
