new: Add logo PentestTools

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -48,6 +48,7 @@ layout: splash
 
 <a href="https://www.3CORESec.com/"><img src="{{ site.url }}/images/logos/banner-500-motto.png"/></a>
 <a href="https://www.telindus.lu/"><img src="{{ site.url }}/images/logos/telindus.png"/></a>
+<a href="https://pentest-tools.com"><img src="{{ site.url }}/images/logos/PentestTools.png"/></a>
 
 <h3 class="archive__subtitle">Media sponsor support by</h3>
 
