chg: [sponsors] added

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -34,6 +34,8 @@ layout: splash
     <a href="https://www.doclerholding.com/en/main/"><img src="{{ site.url }}/images/logos/docler.jpg" /></a>
     <a href="https://www.3CORESec.com/"><img src="{{ site.url }}/images/logos/banner-500-motto.png"/></a>
     <a href="https://www.yeswehack.com/"><img src="{{ site.url }}/images/logos/yeswehack.png"/></a>
+    <a href="https://www.itrust.lu/"><img src="{{ site.url }}/images/logos/itrust_logo.png"/></a>
+    <a href="https://www.grantthornton.lu/en/"><img src="{{ site.url }}/images/logos/grant.jpg"/></a>
     </span>
     <span style="width:40%; display:inline-block;">
     </span>
@@ -42,6 +44,7 @@ layout: splash
 <h3 class="archive__subtitle">CTF sponsoring by</h3>
 
 <a href="https://www.quarkslab.com/"><img src="{{ site.url }}/images/logos/quarkslab.jpg"/></a>
+<a href="https://www.randorisec.fr/"><img src="{{ site.url }}/images/logos/randori.png"/></a>
 
 <h3 class="archive__subtitle">Diversity scholarship support by</h3>
 
