--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -36,6 +36,7 @@ layout: splash
     <a href="https://www.yeswehack.com/"><img src="{{ site.url }}/images/logos/yeswehack.png"/></a>
     <a href="https://www.itrust.lu/"><img src="{{ site.url }}/images/logos/itrust_logo.png"/></a>
     <a href="https://www.grantthornton.lu/en/"><img src="{{ site.url }}/images/logos/grant.jpg"/></a>
+    <a href="https://medium.com/@fvt"><img src="{{ site.url }}/images/logos/fvt.png"/></a>
     </span>
     <span style="width:40%; display:inline-block;">
     </span>
