changed sans logo

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -28,7 +28,7 @@ layout: splash
 <div>
   <span style="width:40%; display:inline-block;">
     <h3 class="archive__subtitle">Sponsored by</h3>
-    <a href="https://www.sans.org/emea"><img src="{{ site.url }}/images/logos/sans-emea.png" /></a>
+    <a href="https://www.sans.org/emea"><img src="{{ site.url }}/images/logos/sans-emea-new.jpg" /></a>
     <a href="http://www.deloitte.lu/"><img src="{{ site.url }}/images/logos/deloitte.png" /></a>
     <a href="https://www.creditmutuel.fr/"><img src="{{ site.url }}/images/logos/cm.png" /></a>
     <a href="https://www.doclerholding.com/en/main/"><img src="{{ site.url }}/images/logos/docler.jpg" /></a>
