chg: [sponsors] more

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -37,6 +37,7 @@ layout: splash
     <a href="https://www.itrust.lu/"><img src="{{ site.url }}/images/logos/itrust_logo.png"/></a>
     <a href="https://www.grantthornton.lu/en/"><img src="{{ site.url }}/images/logos/grant.jpg"/></a>
     <a href="https://www.linkedin.com/in/fvter/"><img src="{{ site.url }}/images/logos/fvt.png"/></a>
+    <a href="https://www.imrim.lu/"><img src="{{ site.url }}/images/logos/imrim.png"/></a>
     </span>
     <span style="width:40%; display:inline-block;">
     </span>
