added Dell Secureworks Speaker's dinners sponsor

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -22,6 +22,7 @@ layout: splash
   </span>
   <span style="width:40%; display:inline-block;">
     <h3 class="archive__subtitle">Speakers dinner sponsored by </h3>
+    <a href="https://www.secureworks.com"><img src="{{ site.url }}/images/logos/Dell_SW.png" /></a> 
   </span>
 </div>
 
